# affection

./: README.md  affection.cabal  default.nix  effect.cabal  example.hs  shell.nix
nix/: nixpkgs.nix  override-haskell-packages.nix
src/: Affection.hs  Effect.hs
src/Affection/: Bell.hs  Internal.hs  Lift.hs  Reader.hs  State.hs  Teletype.hs
src/Affection/Internal/: Demo.hs  Eff.hs  Freer.hs  OpenUnion.hs  Union.hs
src/Control/Monad/: Free.hs
src/Data/: OpenUnion.hs  Union.hs
src/Effect/: Bell.hs  Embed.hs  Internal.hs  Lift.hs  Reader.hs  Teletype.hs
src/Effect/Internal/: Demo.hs  Eff.hs  Free.hs  Freer.hs  OpenUnion.hs
