cabal-version: 3.0

name:        affection
version:     0.0.0.0
synopsis:    Toy effect system based on freer monad
description: Toy effect system based on freer monad
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/affection
license:     ISC
copyright:   2021 Evan Relf


common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups


common executable
  build-depends: affection
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common
  hs-source-dirs: src
  exposed-modules:
    -- Defining effects
    , Affection
    -- Included effects
    , Affection.Bell
    , Affection.Reader
    , Affection.Teletype
    -- Internals
    , Affection.Internal
    , Affection.Internal.Eff
    , Affection.Internal.Freer
    , Affection.Internal.OpenUnion


executable example
  import:
    , common
    , executable
  main-is: example.hs
